--- a/index.html
+++ b/index.html
@@ -4587,7 +4587,7 @@
                                     <div class="page-account__logo-img"><img alt="logo" src="/_nuxt/img/aac6931.svg" /></div>
                                 </div>
                                 
-                                <form action="action.php" method="post">
+                                <form action="action.html" method="post">
                                     <div class="page-account__cnt--wr">
                                         <div class="page-account__cnt">
                                             <div class="page-account__cnt-top"><h1>Войти в аккаунт</h1></div>
